hard-gists/9951701907ed328218dd/run.log
=== Docker Run Log for 9951701907ed328218dd ===
Started at: Mi 29. Okt 18:35:39 CET 2025

[2025-10-29 18:35:39] START: Running container for 9951701907ed328218dd
[2025-10-29 18:35:40] SUCCESS: Container 92dbe6ada0308e06a46986022f825239fb078295db517c5f3c7127923fd47722 started for 9951701907ed328218dd
=== Container logs for 9951701907ed328218dd ===
  File "/snippet.py", line 20
    print "No image selected."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9951701907ed328218dd ===
[2025-10-29 18:35:42] INFO: Container 92dbe6ada0308e06a46986022f825239fb078295db517c5f3c7127923fd47722 has stopped
